--- a/docroot/themes/custom/drupalstacks/templates/layout/html.html.twig
+++ b/docroot/themes/custom/drupalstacks/templates/layout/html.html.twig
@@ -39,7 +39,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>{{ head_title|render }}</title>
+    <title>{{ head_title }}</title>
 
     {# SEO & Accessibility #}
     <meta name="description" content="A feature-rich Drupal homepage with Bootstrap 5" />
